--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MasterRangers</title>
+	<title>Power Rangers</title>
 <link rel="stylesheet" href="style.css">
 <script src="fabric.js"></script>
 
@@ -15,9 +15,9 @@
 
 <body class="body_backgorund">
 	<center>
-		<h3><i>Press <b>r, g, y, p, b</b> to upload &nbsp;</i> Master Rangers</h3>
+		<h3><i>Press <b>r, g, y, p, b</b> to upload &nbsp;</i> Power Rangers</h3>
 							
-		<canvas width="1100" height="450" idf="myCanvas"></canvas>
+		<canvas width="1100" height="450" id="myCanvas"></canvas>
 
 	</center>
 	<script src="main.js"></script>
